oke/tracking/mlflow-tracking-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-tracking-deploy
  namespace: mlflow 
spec:
  selector:
    matchLabels:
      app: mlflow-tracking
  replicas: 2
  template:
    metadata:
      labels:
        app: mlflow-tracking
    spec:
      containers:
      - name: mlflow-tracking
        image: <region-key>.ocir.io/<tenancy-namespace>/<repo-name>:<tag>
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "8Gi"
            cpu: "2"
          limits:
            memory: "8Gi"
            cpu: "2"
      imagePullSecrets:
      - name: <ocirsecret-name>
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow-tracking-svc
  namespace: mlflow
spec:
  selector:
    app: mlflow-tracking
  ports:
    - port: 8088
      targetPort: 5000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-tracking-ing
  namespace: mlflow
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: mlflow-tracking-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /tracking(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: mlflow-tracking-svc
              port:
                number: 8088
